feat: install i18n, vue-router and my skills page

--- a/src/locales/pt-br.json
+++ b/src/locales/pt-br.json
@@ -1,6 +1,6 @@
 {
     "about": "Sobre mim",
-    "aboutText": "Meu nome é Giovani, estudante de engenharia de software, estagiando e estudando em Minas Gerais, Brasil!",
+    "aboutText": "Olá, meu nome é Giovani. Atualmente estou estudando engenharia de software, e estagiando em Minas Gerais, Brasil! Gosto muito de desenvolvimento web e estou sempre aberto para contribuir em projetos de código aberto.",
     "contact": "Contato",
     "contactInfo": "Se você quiser falar comigo, você pode usar os links acima, ou escreva algo no campo abaixo para me enviar um email!",
     "checkSocialLinks": "Ei, dá uma olhada nas minhas redes sociais!",
