--- a/src/locales/en-us.json
+++ b/src/locales/en-us.json
@@ -1,6 +1,6 @@
 {
     "about": "About me",
-    "aboutText": "I'm Giovani, a software engineering student, interning and studying in Minas Gerais, Brazil!",
+    "aboutText": "Hello, I'm Giovani, a software engineering student. Currently I'm interning and studying in Minas Gerais, Brazil! I love programming, I'm passionate about web development and I'm always open to contribute in open source projects.",
     "contact": "Contact",
     "contactInfo": "If you want to contact me, you can use the links above, or say something in the field below to send me an email!",
     "checkSocialLinks": "Hey, check out my social links!",
