ref: add more i18n strings

--- a/src/locales/en-us.json
+++ b/src/locales/en-us.json
@@ -5,7 +5,7 @@
     "contactInfo": "If you want to contact me, you can use the links above, or say something in the field below to send me an email!",
     "checkSocialLinks": "Hey, check out my social links!",
     "welcome": "Hi, I'm Giovani! Welcome to my website!",
-    "skills": "Skills",
+    "skills": "My Skills",
     "projects": "Projects",
     "send": "Send",
     "myLast": "My Last.FM Status",
