--- a/src/locales/pt-br.json
+++ b/src/locales/pt-br.json
@@ -5,7 +5,7 @@
     "contactInfo": "Se você quiser falar comigo, você pode usar os links acima, ou escreva algo no campo abaixo para me enviar um email!",
     "checkSocialLinks": "Ei, dá uma olhada nas minhas redes sociais!",
     "welcome": "Olá, eu sou o Giovani! Bem-vindo ao meu site!",
-    "skills": "Habilidades",
+    "skills": "Minhas habilidades",
     "projects": "Projetos",
     "send": "Enviar",
     "myLast": "Meu status do Last.FM",
