feat: music screen

--- a/src/locales/en-us.json
+++ b/src/locales/en-us.json
@@ -9,7 +9,7 @@
     "projects": "Projects",
     "send": "Send",
     "myLast": "My Last.FM Status",
-    "myLastDescription": "I'm listening to:",
+    "myLastDescription": "I was listening to:",
     "lastPlayed": "Last played song:",
     "lastLink": "View on Last.FM",
     "music": "Music",
