--- a/src/locales/pt-br.json
+++ b/src/locales/pt-br.json
@@ -17,5 +17,6 @@
     "music": "Música",
     "currentlyListening": "Eu estou ouvindo neste momento!",
     "lastUpdate": "Última atualização: ",
-    "noRecentTracks": "Nenhuma música recente encontrada"
+    "noRecentTracks": "Nenhuma música recente encontrada",
+    "my-projects": "Meus projetos"
 }
