--- a/src/locales/en-us.json
+++ b/src/locales/en-us.json
@@ -1,8 +1,10 @@
 {
-  "about": "About me",
+  "about": "About Me",
+  "greeting": "Hello,",
+  "introduction": "I'm Giovani",
   "aboutWebText": "Hi, this is my personal website. I've made in Vue 3 with TypeScript, and I'm using Vite as the build tool. This site is a showcase of my skills, projects, and interests in development.",
-  "aboutMeText": "Hello, I'm Giovani, a software engineering student. Currently I'm interning and studying in Minas Gerais, Brazil! I love programming, I'm passionate about web development and I'm always open to contribute in open source projects.",
-  "aboutThisWebsite": "About this website",
+  "aboutMeText": "I'm a software engineering student, currently interning and studying in Minas Gerais, Brazil! I love programming, I'm passionate about web development and I'm always open to contribute in open source projects.",
+  "aboutThisWebsite": "About This Website",
   "contact": "Contact",
   "contactInfo": "If you want to contact me, you can use the links above, or say something in the field below to send me an email!",
   "checkSocialLinks": "Hey, check out my social links!",
