--- a/src/locales/pt-br.json
+++ b/src/locales/pt-br.json
@@ -1,5 +1,5 @@
 {
-  "about": "Sobre mim",
+  "home": "Início",
   "greeting": "Olá,",
   "introduction": "Eu sou Giovani",
   "aboutMeText": "Sou estudante de engenharia de software, atualmente estagiando em Minas Gerais, Brasil! Gosto muito de desenvolvimento web e estou sempre aberto para contribuir em projetos de código aberto.",
