ref: Add subtitle to all pages, change music to lastFM

--- a/src/locales/pt-br.json
+++ b/src/locales/pt-br.json
@@ -4,8 +4,9 @@
   "introduction": "Eu sou Giovani",
   "aboutMeText": "Sou estudante de engenharia de software, atualmente estagiando em Minas Gerais, Brasil! Gosto muito de desenvolvimento web e estou sempre aberto para contribuir em projetos de código aberto.",
   "aboutWebText": "Olá, este é o meu site pessoal. Eu o desenvolvi usando Vue 3 com TypeScript, e estou utilizando o Vite como ferramenta de build. Este site é uma vitrine das minhas habilidades, projetos e interesses em desenvolvimento.",
-  "aboutThisWebsite": "Sobre este site",
-  "contact": "Contato",
+  "aboutThis": "Sobre este",
+  "website": "Site",
+  "socialNetworks": "Redes sociais",
   "contactInfo": "Se você quiser falar comigo, você pode usar os links acima, ou escreva algo no campo abaixo para me enviar um email!",
   "checkSocialLinks": "Ei, dá uma olhada nas minhas redes sociais!",
   "welcome": "Olá, eu sou o Giovani! Bem-vindo ao meu site!",
@@ -13,15 +14,17 @@
   "projects": "Projetos",
   "send": "Enviar",
   "myLast": "Meu status do Last.FM",
-  "myLastDescription": "Dê uma olhada na música que eu estava ouvindo:",
+  "myLastDescription": "Dê uma olhada no meu status do LastFM:",
   "lastPlayed": "Última música ouvida:",
   "lastLink": "Clique aqui para ver a música no Last.FM",
-  "music": "Música",
+  "lastFM": "LastFM",
   "currentlyListening": "Eu estou ouvindo neste momento!",
   "lastUpdate": "Última atualização: ",
   "noRecentTracks": "Nenhuma música recente encontrada",
   "trackLoadError": "Falha ao carregar dados da faixa",
   "repositoryLoadError": "Falha ao carregar dados do repositório",
   "my-projects": "Meus projetos",
-  "some-of": "Alguns dos"
+  "some-of": "Alguns dos",
+  "some-of-2": "Algumas das",
+  "my": "Minhas"
 }
