--- a/src/locales/en-us.json
+++ b/src/locales/en-us.json
@@ -4,8 +4,9 @@
   "introduction": "I'm Giovani",
   "aboutWebText": "Hi, this is my personal website. I've made in Vue 3 with TypeScript, and I'm using Vite as the build tool. This site is a showcase of my skills, projects, and interests in development.",
   "aboutMeText": "I'm a software engineering student, currently interning and studying in Minas Gerais, Brazil! I love programming, I'm passionate about web development and I'm always open to contribute in open source projects.",
-  "aboutThisWebsite": "About This Website",
-  "contact": "Contact",
+  "aboutThis": "About",
+  "website": "This Website",
+  "socialNetworks": "Social networks",
   "contactInfo": "If you want to contact me, you can use the links above, or say something in the field below to send me an email!",
   "checkSocialLinks": "Hey, check out my social links!",
   "welcome": "Hi, I'm Giovani! Welcome to my website!",
@@ -13,15 +14,18 @@
   "projects": "Projects",
   "send": "Send",
   "myLast": "My Last.FM Status",
-  "myLastDescription": "I was listening to:",
+  "myLastDescription": "Take a look in my LastFM status:",
   "lastPlayed": "Last played song:",
   "lastLink": "View on Last.FM",
-  "music": "Music",
+  "lastFM": "LastFM",
   "currentlyListening": "I'm currently listening to it!",
   "lastUpdate": "Last update: ",
   "noRecentTracks": "No recent tracks found",
   "trackLoadError": "Failed to load track data",
   "repositoryLoadError": "Failed to load repository data",
   "my-projects": "My Projects",
-  "some-of": "Some of "
+  "some-of": "Some of",
+  "some-of-2": "Some of",
+  "howTo": "How to",
+  "my": "My"
 }
