ref: replace about text

--- a/src/locales/pt-br.json
+++ b/src/locales/pt-br.json
@@ -6,6 +6,7 @@
   "aboutWebText": "Olá, este é o meu site pessoal. Eu o desenvolvi usando Vue 3 com TypeScript, e estou utilizando o Vite como ferramenta de build. Este site é uma vitrine das minhas habilidades, projetos e interesses em desenvolvimento.",
   "aboutThis": "Sobre este",
   "website": "Site",
+  "about": "Sobre",
   "socialNetworks": "Redes sociais",
   "contactInfo": "Se você quiser falar comigo, você pode usar os links acima, ou escreva algo no campo abaixo para me enviar um email!",
   "checkSocialLinks": "Ei, dá uma olhada nas minhas redes sociais!",
