ref: improve rounded section style

--- a/src/locales/pt-br.json
+++ b/src/locales/pt-br.json
@@ -5,7 +5,7 @@
   "aboutMeText": "Sou estudante de engenharia de software, atualmente estagiando em Minas Gerais, Brasil! Gosto muito de desenvolvimento web e estou sempre aberto para contribuir em projetos de código aberto.",
   "aboutWebText": "Olá, este é o meu site pessoal. Eu o desenvolvi usando Vue 3 com TypeScript, e estou utilizando o Vite como ferramenta de build. Este site é uma vitrine das minhas habilidades, projetos e interesses em desenvolvimento.",
   "aboutThis": "Sobre este",
-  "website": "Site",
+  "website": "Esse site",
   "about": "Sobre",
   "socialNetworks": "Redes sociais",
   "contactInfo": "Se você quiser falar comigo, você pode usar os links acima, ou escreva algo no campo abaixo para me enviar um email!",
